@@ -48,7 +48,7 @@ void drawIntro(void)
     printf("    |##   #  ### ### ### # # # #  #  ### # #|\n");
     printf("    |                       %s|\n",APP_NAME);
     printf("    -----------------------------------------\n\n");
-    printf("Copyright (C) 2005 Fabien Chereau\n\n");
+    printf("Copyright (C) 2000-2005 Fabien Chereau et al.\n\n");
     printf(_("Please check last version and send bug report & comments \n\
 on stellarium web page : http://stellarium.sourceforge.net\n\n"));
 };
